--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
 streamlit==1.18.0
-torch==1.13.1
-Pillow==9.2.0
 tensorflow==2.11.0
-rich==14.0.0
-markdown-it-py==3.0.0
-mdurl==0.1.2
-pygments==2.19.1
+Pillow==9.2.0
+gdown
